exact the component framework

--- a/detail.html
+++ b/detail.html
@@ -12,7 +12,6 @@
         <link rel="stylesheet" type="text/css" href="../css/frame.css"/>
         <link rel="stylesheet" type="text/css" href="../css/component.css"/>
         <link rel="stylesheet" type="text/css" href="../css/page.css"/>
-        <!--need font awesome  -->
     </head>
     <body>
         <main>
@@ -23,7 +22,7 @@
                 <!--use ajax to search data from server  -->
                 <div id="search">
                     <input type="text" autocomplete="true" maxlength="20" placeholder="搜索你要找的内容">
-                    <div class="search-btn"></div>
+                    <div class="search-btn"><li class="fa fa-search"></li></div>
                     </div>
                 </div>
             </header>
@@ -42,21 +41,23 @@
             </aside>
             <article>
                 <section>
-                    <h3>最近更新</h3>
-                    <div class="article-items">
-                        <div class="article-item">
-                            <div class="thumnail">
-                                <img class="" alt="" src="">
-                            </div>
-                            <h4 class="title">苏州非物质文化遗产馆</h4>
+                    <h2></h2>
+                    <div class="meta-data">
+                        <div class="row">
                             <div class="tags">
-                                <span class="tag">苏州</span>
-                                <span class="tag">非物质文化遗产</span>
-                                <span class="tag">历史</span>
+                                <span class="tag"></span>
+                                <span class="tag"></span>
+                                <span class="tag"></span>
+                                <span class="tag"></span>
+                                <span class="tag"></span>
+                                <span class="tag"></span>
                             </div>
-                            <div="meta-data">
-                                <span class="publish">2017.08.20</span>
-                                <span class="view-num"><li class="fa fa-eye"></li>123</span>
+                            <div class="publishtime">2017-08-12</div>
+                            <div class="viewnumber"><li class="fa fa-eye"></li>123</div>
+                        </div>
+                        <div class="row">
+                            <div class="author">
+                                <span>作者:</span><span class="data"></span>
                             </div>
                         </div>
                     </div>
