--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <link rel="stylesheet" type="text/css" href="../css/frame.css"/>
         <link rel="stylesheet" type="text/css" href="../css/component.css"/>
         <link rel="stylesheet" type="text/css" href="../css/page.css"/>
+        <!--need font awesome  -->
     </head>
     <body>
         <main>
@@ -41,23 +42,21 @@
             </aside>
             <article>
                 <section>
-                    <h2></h2>
-                    <div class="meta-data">
-                        <div class="row">
-                            <div class="tags">
-                                <span class="tag"></span>
-                                <span class="tag"></span>
-                                <span class="tag"></span>
-                                <span class="tag"></span>
-                                <span class="tag"></span>
-                                <span class="tag"></span>
+                    <h3>最近更新</h3>
+                    <div class="article-items">
+                        <div class="article-item">
+                            <div class="thumnail">
+                                <img class="" alt="" src="">
                             </div>
-                            <div class="publishtime">2017-08-12</div>
-                            <div class="viewnumber"><li class="fa fa-eye"></li>123</div>
-                        </div>
-                        <div class="row">
-                            <div class="author">
-                                <span>作者:</span><span class="data"></span>
+                            <h4 class="title">苏州非物质文化遗产馆</h4>
+                            <div class="tags">
+                                <span class="tag">苏州</span>
+                                <span class="tag">非物质文化遗产</span>
+                                <span class="tag">历史</span>
+                            </div>
+                            <div="meta-data">
+                                <span class="publish">2017.08.20</span>
+                                <span class="view-num"><li class="fa fa-eye"></li>123</span>
                             </div>
                         </div>
                     </div>
