add tag, button, thumnail,and index item to repo

--- a/component.html
+++ b/component.html
@@ -25,6 +25,14 @@
                 padding: 128px 64px;
                 box-sizing: border-box;
             }
+            h3{
+                line-height: 300%;
+                font-weight:400;
+                color:#888;
+            }
+            section{
+                margin:64px 0;
+            }
         </style>
     </head>
     <body>
@@ -79,6 +87,7 @@
             <section>
                 <h3>按钮</h3>
                 <button>这是按钮</button>
+                <div class="button">这是按钮</div>
             </section>
             <!--end  -->
             <!--start  -->
@@ -86,8 +95,10 @@
                 <h3>点赞按钮</h3>
                 <div class="chear-up">
                     <div class="content-wrapper">
-                        <span class="data">472</span>
-                        <li class="fa fa-thumbs-o-up"></li>
+                        <span class="icon">
+                            <li class="fa fa-thumbs-o-up"></li>
+                        </span>
+                        <span class="data">47200000000</span>
                     </div>
                 </div>
             </section>
@@ -95,14 +106,14 @@
             <!--start  -->
             <section>
                 <h3>前台标签按钮</h3>
-                <span class="fd-tag">
+                <span class="fe-tag">
                     PPT设计
                 </span>
             </section>
             <!--end  -->
             <!--start  -->
             <section>
-                <h3>首页菜单按钮</h3>
+                <h3>首页菜单按钮(后台)</h3>
                 <div class="menu-item">
                     <li class="fa fa-pencil-square-o"></li>
                     <span>文章管理</span>
@@ -112,11 +123,11 @@
             <!--start  -->
             <section>
                 <h3>登录头像</h3>
-                <div class="log-in-thumnail">
+                <div class="login-portrait">
                     <span class="portrait">
                         <img src="image/thumnail.png" alt="头像">
                     </span>
-                    <span>CUGHUDSON</span>
+                    <span class="data">CUGHUDSON</span>
                 </div>
             </section>
             <!--end  -->
@@ -124,7 +135,7 @@
             <section>
                 <h3>后台标签</h3>
                 <div class="be-tag">
-                    <span class="data"></span>
+                    <span class="data">后台标签</span>
                     <span class="tag-btn">
                         <li class="fa fa-close"></li>
                     </span>
