add scroll-top, modify tag and poritait component

--- a/component.html
+++ b/component.html
@@ -79,7 +79,9 @@
             <section>
                 <h3>回到顶部按钮</h3>
                 <div class="srcoll-top">
-                    <li class="fa fa-arrow-up"></li>    
+                    <div class="content-wrapper">
+                        <li class="fa fa-arrow-up"></li>    
+                    </div>
                 </div>
             </section>
             <!--end  -->
@@ -107,7 +109,7 @@
             <section>
                 <h3>前台标签按钮</h3>
                 <span class="fe-tag">
-                    PPT设计
+                    <span class="tag-data">PPT设计</span>
                 </span>
             </section>
             <!--end  -->
@@ -123,11 +125,11 @@
             <!--start  -->
             <section>
                 <h3>登录头像</h3>
-                <div class="login-portrait">
+                <div class="login-portrait clearfix">
                     <span class="portrait">
                         <img src="image/thumnail.png" alt="头像">
                     </span>
-                    <span class="data">CUGHUDSON</span>
+                    <span class="username">CUGHUDSON</span>
                 </div>
             </section>
             <!--end  -->
@@ -135,7 +137,7 @@
             <section>
                 <h3>后台标签</h3>
                 <div class="be-tag">
-                    <span class="data">后台标签</span>
+                    <span class="tag-data">后台标签</span>
                     <span class="tag-btn">
                         <li class="fa fa-close"></li>
                     </span>
