add sys menu item to repo

--- a/component.html
+++ b/component.html
@@ -117,8 +117,8 @@
             <section>
                 <h3>首页菜单按钮(后台)</h3>
                 <div class="menu-item">
-                    <li class="fa fa-pencil-square-o"></li>
-                    <span>文章管理</span>
+                    <span class="icon"><li class="fa fa-pencil-square-o"></li></span>
+                    <span class="data">文章管理</span>
                 </div>
             </section>
             <!--end  -->
@@ -147,11 +147,12 @@
             <!--start  -->
             <section>
                 <h3>系统管理菜单</h3>
-                <div class="sys-config-menu">
+                <div class="sys-config-item">
                     <span id="admin-config" class="data">
                         <li class="fa fa-gears fa-2x"></li>
                     </span>
-                    <span>管理员配置</span>
+                    <a class="trigger" href=""></a>
+                    <span class="data">管理员配置</span>
                 </div>
             </section>
             <!--end  -->
