add detail page to repo

--- a/component.html
+++ b/component.html
@@ -145,7 +145,7 @@
             <!--start  -->
             <section>
                 <h3>回到顶部按钮</h3>
-                <div class="srcoll-top">
+                <div class="scroll-top">
                     <div class="content-wrapper">
                         <li class="fa fa-arrow-up"></li>    
                     </div>
@@ -187,7 +187,7 @@
             <!--start  -->
             <section>
                 <h3>点赞按钮</h3>
-                <div class="chear-up">
+                <div class="chear-up-btn">
                     <div class="content-wrapper">
                         <span class="data">47200000000</span>
                         <span class="icon">
